Implementation of Home Page.

--- a/ExampleRazorPizzariaProject/Pages/Index.cshtml
+++ b/ExampleRazorPizzariaProject/Pages/Index.cshtml
@@ -1,10 +1,15 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page";
+	ViewData["Title"] = "Home";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+	<h1 style="color: rgb(189, 84, 58);font-weight: 1000">You can´t buy happiness</h1>
+	<img src="~/images/dogPizzaHeart.png" />
+	<h1 style="color: rgb(189, 84, 58);font-weight: 1000">But you can by pizza!</h1>
+	<a class="btn btn-outline-danger">Bring me that pizza <img src="~/images/pizza.png" class="objectSpin" /></a>
 </div>
+
+
+<link rel="stylesheet" href="~/css/spin.css" type="text/css" />
