--- a/ExampleRazorPizzariaProject/Pages/Shared/_Layout.cshtml
+++ b/ExampleRazorPizzariaProject/Pages/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3" style="background-color:rgba(245,183,45,255)">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-page="/Index">Pizzaria Project</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -36,7 +36,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer" style="background-color:rgba(245,183,45,255)">
         <div class="container">
             &copy; 2023 - Pizzaria Project 
         </div>
