Implementation of the first part pizzas page.

--- a/ExampleRazorPizzariaProject/Pages/Index.cshtml
+++ b/ExampleRazorPizzariaProject/Pages/Index.cshtml
@@ -8,8 +8,6 @@
 	<h1 style="color: rgb(189, 84, 58);font-weight: 1000">You can´t buy happiness</h1>
 	<img src="~/images/dogPizzaHeart.png" />
 	<h1 style="color: rgb(189, 84, 58);font-weight: 1000">But you can by pizza!</h1>
-	<a class="btn btn-outline-danger">Bring me that pizza <img src="~/images/pizza.png" class="objectSpin" /></a>
+	<a class="btn btn-outline-danger"  asp-page="Pizzas">Bring me that pizza <img src="~/images/pizza.png" class="objectSpin"/></a>
 </div>
 
-
-<link rel="stylesheet" href="~/css/spin.css" type="text/css" />
