--- a/ExampleRazorPizzariaProject/Pages/Shared/_Layout.cshtml
+++ b/ExampleRazorPizzariaProject/Pages/Shared/_Layout.cshtml
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ExampleRazorPizzariaProject.styles.css" asp-append-version="true" />
+	<link rel="stylesheet" href="~/css/spin.css" type="text/css" />
+
 </head>
 <body>
     <header>
@@ -23,7 +25,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Pizza">Pizzas</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Pizzas">Pizzas</a>
                         </li>
                     </ul>
                 </div>
