--- a/ExampleRazorPizzariaProject/Pages/Index.cshtml
+++ b/ExampleRazorPizzariaProject/Pages/Index.cshtml
@@ -6,7 +6,7 @@
 
 <div class="text-center">
 	<h1 style="color: rgb(189, 84, 58);font-weight: 1000">You can´t buy happiness</h1>
-	<img src="~/images/dogPizzaHeart.png" />
+	<img src="~/images/dogPizzaHeart.png" style="width:25em;"/>
 	<h1 style="color: rgb(189, 84, 58);font-weight: 1000">But you can by pizza!</h1>
 	<a class="btn btn-outline-danger"  asp-page="Pizzas">Bring me that pizza <img src="~/images/pizza.png" class="objectSpin"/></a>
 </div>
