--- a/ExampleRazorPizzariaProject/Pages/Pizzas.cshtml
+++ b/ExampleRazorPizzariaProject/Pages/Pizzas.cshtml
@@ -14,10 +14,10 @@
 		<div class="row">
 			<div class="col-12 mb-2 mt-2">
 				<div class="row w-100">
-					<div class="col-4">
+					<div class="col-md-4 col-sm-12">
 						<img class="w-100" src="images/dogsCook.png" />
 					</div>
-					<div class="col-8 align-items-center">
+					<div class="col-md-8 col-sm-12 align-items-center">
 						<div class="align-middle">
 							<h3 style="text-align:left">Are you feeling creative today? How about creating your very own pizza flavor?</h3>
 							<p style="text-align:left">The possibilities are endless! You could go for classic toppings like pepperoni and mushrooms, or you could get adventurous and try something new. How about roasted garlic, caramelized onions, or sliced avocado? Oh and don't forget the cheese.</p>
