Implementation of the save and redirect in CustomPizza page.

--- a/ExampleRazorPizzariaProject/Pages/Forms/CustomPizza.cshtml
+++ b/ExampleRazorPizzariaProject/Pages/Forms/CustomPizza.cshtml
@@ -2,28 +2,45 @@
 
 @model ExampleRazorPizzariaProject.Pages.Forms.CustomPizzaModel
 @{
-		ViewData["Title"] = "Custom Pizza";
+	ViewData["Title"] = "Custom Pizza";
 }
-	<div class="container">
-		<h1 class="text-center">Create your own pizza! YEEEY!</h1>
-		<form method="post">
-			<h4 class="mt-4">Use your imagination and choose the toppings bellow that you would like to add in your pizza. Any combination is possible.</h4>
-			<p class="text-muted w-100 mt-2" style="text-align: right;"><i>*The base price of the pizza is €@Model.BasePricePizza and the toppings increment this price.</i></p>
-
-			<div class="card mt-2 mb-2">
-				<div class="card-header primary-red fw-bold">
-					Toppings
-				</div>
-				<div class="card-body">
-					<div class="row">
-						@foreach (var topping in Model.AvailableToppings)
+<div class="container">
+	<h1 class="text-center">Create your own pizza! YEEEY!</h1>
+	<form method="post">
+		<h4 class="mt-4">Use your imagination and choose the toppings bellow that you would like to add in your pizza. Any combination is possible.</h4>
+		<p class="text-muted w-100 mt-2" style="text-align: right;"><i>*The base price of the pizza is €@Model.BasePricePizza and the toppings increment this price.</i></p>
+		<div class="row mb-3">
+			<label for="name" class="col-sm-2 col-form-label">Your name:</label>
+			<div class="col-sm-8">
+				<input type="text" class="form-control" id="name" asp-for="Order.CustomerName">
+			</div>
+		</div>
+		<div class="row mb-3">
+			<label for="address" class="col-sm-2 col-form-label">Address for delivery:</label>
+			<div class="col-sm-8">
+				<input type="text" class="form-control" id="address" asp-for="Order.Address">
+			</div>
+		</div>
+		<div class="card mt-2 mb-2">
+			<div class="card-header primary-red fw-bold">
+				Toppings
+			</div>
+			<div class="card-body">
+				<div class="row">
+					@{
+						int i = 0;
+					}
+					@foreach (var topping in Model.AvailableToppings)
 					{
-						<div class="col-6" style="font-size:20px">
+						<div class="col-md-6 col-sm-12" style="font-size:20px">
 							<div class="form-check">
-								<input class="form-check-input custom-checkbox-color chkclass" type="checkbox" value="">
+								<input type="hidden" asp-for="AvailableToppings[i].Id" />
+								<input type="hidden" asp-for="AvailableToppings[i].ToppingAditionalPrice" />
+								<input class="form-check-input custom-checkbox-color chkclass" type="checkbox" asp-for="AvailableToppings[i].IsSelected">
 								<label class="form-check-label">
 									@topping.Name + €<span class="sum valueToSum">@topping.ToppingAditionalPrice</span>
 								</label>
+								<span hidden>@(i++)</span>
 							</div>
 						</div>
 					}
@@ -31,7 +48,7 @@
 			</div>
 			<div class="card-footer primary-red">
 				<span class="fw-bold" style="vertical-align: middle;"> Total Price: €<label id="sum">@Model.BasePricePizza</label></span>
-				<a class="btn btn-outline-warning" style="float:right" asp-page="Pizzas">Order now! <img src="~/images/pizza.png" class="objectSpin" /></a>
+				<button class="btn btn-outline-warning" style="float:right" type="submit">Order now! <img src="~/images/pizza.png" class="objectSpin" /></button>
 			</div>
 		</div>
 	</form>
