Implementation of the list of pizzas.

--- a/ExampleRazorPizzariaProject/Pages/Pizzas.cshtml
+++ b/ExampleRazorPizzariaProject/Pages/Pizzas.cshtml
@@ -10,22 +10,33 @@
 		<h4 class="mt-4">Choose one or try our pizza builder. Then just click Order and relax!</h4>
 		<p class="text-muted w-100 mt-2" style="text-align: right;"><i>*Only one pizza per order.</i></p>
 	</div>
-	<div class="container primary-red" style="border-radius: .25rem;">
-		<div class="row">
-			<div class="col-12 mb-2 mt-2">
-				<div class="row w-100">
-					<div class="col-md-4 col-sm-12">
-						<img class="w-100" src="images/dogsCook.png" />
-					</div>
-					<div class="col-md-8 col-sm-12 align-items-center">
-						<div class="align-middle">
-							<h3 style="text-align:left">Are you feeling creative today? How about creating your very own pizza flavor?</h3>
-							<p style="text-align:left">The possibilities are endless! You could go for classic toppings like pepperoni and mushrooms, or you could get adventurous and try something new. How about roasted garlic, caramelized onions, or sliced avocado? Oh and don't forget the cheese.</p>
-							<a class="btn btn-outline-warning" style="float:right" asp-page="Forms/CustomPizza">Yes, baby! Let's do it! <img src="~/images/pizza.png" class="objectSpin" /></a>
-						</div>
+	<div class="row primary-red m-1">
+		<div class="col-12 mb-2 mt-2">
+			<div class="row w-100">
+				<div class="col-md-4 col-sm-12">
+					<img class="w-100" src="images/dogsCook.png" />
+				</div>
+				<div class="col-md-8 col-sm-12 align-items-center">
+					<div class="align-middle">
+						<h3 style="text-align:left">Are you feeling creative today? How about creating your very own pizza flavor?</h3>
+						<p style="text-align:left">The possibilities are endless! You could go for classic toppings like pepperoni and mushrooms, or you could get adventurous and try something new. How about roasted garlic, caramelized onions, or sliced avocado? Oh and don't forget the cheese.</p>
+						<a class="btn btn-outline-warning" style="float:right" asp-page="Forms/CustomPizza">Yes, baby! Let's do it! <img src="~/images/pizza.png" class="objectSpin" /></a>
 					</div>
 				</div>
 			</div>
 		</div>
+	</div>
+	<div class="row">
+		@foreach (var pizza in Model.Pizzas)
+		{
+			<div class="col-md-4 col-sm-12">
+				<div class="row secondary-red m-1 p-2">
+					<img src="data:image/png;base64,@Convert.ToBase64String(@pizza.Image)" alt="Image" style="width:150px;margin-left: auto; margin-right: auto;">
+					<label class="w-100 fw-bold p-2">@pizza.Name</label>
+					<label class="w-100 fw-bold">€@pizza.Price</label>
+					<a class="btn btn-outline-warning w-50 mt-2" style="margin-left: auto; margin-right: auto;" asp-page="Forms/PizzaSelection" asp-route-Pizza="@pizza.Id">Select</a>
+				</div>
+			</div>
+		}
 	</div>
 </div>
