--- a/ExampleRazorPizzariaProject/wwwroot/css/site.css
+++ b/ExampleRazorPizzariaProject/wwwroot/css/site.css
@@ -1,7 +1,3 @@
-html {
-    font-size: 14px;
-}
-
 @media (min-width: 768px) {
     html {
         font-size: 16px;
@@ -11,6 +7,7 @@ html {
 html {
     position: relative;
     min-height: 100%;
+    font-size: 14px;
 }
 
 body {
@@ -19,9 +16,22 @@ body {
 
 .primary-red {
     border-color: rgb(189, 84, 58);
+    border-radius: .25rem;
     background-color: rgb(189, 84, 58);
     color: white;
 }
+
+.secondary-red {
+    border: solid 7px rgb(189, 84, 58);
+    border-radius: .25rem;
+    background-color: rgb(189 84 58 / 85%);
+    color: white;
+}
+
+    .secondary-red:hover {
+        background-color: rgb(189, 84, 58);
+        transform:scale(1.02)
+    }
 
 .custom-checkbox-color:checked {
     border-color: #ffc107;
