--- a/ExampleRazorPizzariaProject/Pages/Error.cshtml
+++ b/ExampleRazorPizzariaProject/Pages/Error.cshtml
@@ -1,26 +1,28 @@
 ﻿@page
 @model ErrorModel
 @{
-    ViewData["Title"] = "Error";
+	ViewData["Title"] = "Error";
 }
+<div class="row primary-red-text">
+	<h1 class="text-center">Oops! We apologize for the inconvenience.</h1>
+	<div class="col-md-4 col-sm-12">
+		<img src="/images/PizzaCatGif.gif" class="w-100" />
+	</div>
+	<div class="col-md-8 col-sm-12 mt-3" style="text-align: justify;">
+		<h3 class="mb-2">
+			It seems like there was an error processing your request. Our team has been notified, and we are working diligently to resolve the issue. We appreciate your patience and understanding.
+		</h3>
+		<h3>
+			In the meantime, we invite you to explore our delicious pizza menu and other mouthwatering offerings. We assure you that our pizzas are made with the freshest ingredients and crafted with love.
+		</h3>
+		<p style="text-align:right">
+			<a class="btn btn-outline-danger" asp-page="Pizzas">I want to check the menu! <img src="~/images/pizza.png" class="objectSpin" /></a>
+		</p>
+	</div>
+</div>
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
 
-@if (Model.ShowRequestId)
-{
-    <p>
-        <strong>Request ID:</strong> <code>@Model.RequestId</code>
-    </p>
-}
 
-<h3>Development Mode</h3>
-<p>
-    Swapping to the <strong>Development</strong> environment displays detailed information about the error that occurred.
-</p>
-<p>
-    <strong>The Development environment shouldn't be enabled for deployed applications.</strong>
-    It can result in displaying sensitive information from exceptions to end users.
-    For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
-    and restarting the app.
-</p>
+
+
+
